# arraymaker

./: .gitattributes  LICENSE  README.md  pyproject.toml  wsgi.py
notebooks/: interactive_study.ipynb  plot_units.ipynb
src/: app.py  callbacks.py  layout.py
src/arraymaker/: __init__.py  app.py
src/arraymaker/callbacks/: custom_callbacks.py  merge_callbacks.py  models_callbacks.py  pmt_callbacks.py  sipm_callbacks.py  xemass_callbacks.py
src/arraymaker/pages/: about.py  common.py  customunitdisplay.py  home.py  models.py  pmtarraydisplay.py  sipmarraydisplay.py  xe-mass.py
src/arraymaker/utils/: __init__.py  plotly_functions.py  pmt_aux_functions.py  sipm_aux_functions.py  xemass_functions.py
src/sipmarray_interactive/: app.py  callbacks.py  layout.py
src/sipmarray_interactive/callbacks/: merge_callbacks.py  sipm_callbacks.py
src/sipmarray_interactive/pages/: common.py  common_navbar.py  home.py  pmtarraydisplay.py  sipmarraydisplay.py
src/sipmarray_interactive/utils/: interactive_aux_functions.py
src/utils/: interactive_aux_functions.py
