[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sipmarray_interactive"
version = "0.1"
authors = [{ name="Ricardo Peres", email="rperes@physik.uzh.ch"},]
description = "Dash display for sipmarray."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "matplotlib",
    "sipmarray"
    ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
"Homepage" = "https://github.com/ricmperes/sipmarray-interactive"
"Bug Tracker" = "https://github.com/ricmperes/sipmarray-interactive/issues"